# rusty-rich

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Full_audit.md  RAW_URLS_AND_AI_PROMPTS.md  README.md  compare_rich.py  deny.toml  full_audit.md
.claude/skills/run-rusty-rich/: SKILL.md  ci-driver.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  security-audit.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/advanced/: box-drawing.md  custom-renderables.md  export.md  themes.md  tracebacks.md
docs/src/api/: console.md  types.md
docs/src/content/: json.md  logging.md  markdown.md  syntax.md
docs/src/core-concepts/: console.md  renderable-protocol.md  style-and-color.md  text-and-markup.md
docs/src/dynamic/: live.md  progress.md  screen.md  spinners.md  status.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/interactive/: console-input.md  prompts.md
docs/src/renderables/: columns.md  layout.md  padding-and-align.md  panel.md  rule.md  table.md  tree.md
examples/: demo.rs  view_all.rs
skills/compare-rich-vs-rust-rich/: SKILL.md  workflow.js
src/: align.rs  ansi.rs  bar.rs  box_drawing.rs  cells.rs  color.rs  columns.rs  console.rs  constrain.rs  containers.rs  control.rs  diagnose.rs  emoji.rs  errors.rs  export.rs  file_proxy.rs  filesize.rs  highlighter.rs  inspect.rs  json.rs  layout.rs  lib.rs  live.rs  live_render.rs  log_render.rs  logging.rs  markdown.rs  markup.rs  measure.rs  padding.rs  pager.rs  palette.rs  panel.rs  pretty.rs  progress.rs  progress_columns.rs  prompt.rs  ratio.rs  region.rs  repr.rs  (+15 more)
tests/: battle_test.rs  box_table_exhaustive.rs
