[package]
name = "rusty-rich"
version = "0.4.1"
edition = "2021"
description = "Rich text and beautiful formatting in the terminal — a Rust port of Python's Rich library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sinescode/rusty-rich"
documentation = "https://docs.rs/rusty-rich"
keywords = ["terminal", "rich", "formatting", "tui", "syntax-highlighting"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
crossterm = "0.29"
terminal_size = "0.4"
palette = "0.7"
# atty removed — migrated to std::io::IsTerminal (stabilized Rust 1.70)
syntect = { version = "5.1", optional = true }
pulldown-cmark = { version = "0.10", optional = true }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
unicode-width = "0.2"
chrono = "0.4"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["syntax-highlighting", "markdown"]
syntax-highlighting = ["dep:syntect"]
markdown = ["dep:pulldown-cmark"]
minimal = []
